css/custom.css
.span12 .hero {
	background-color: #1abc9c;
	height: 400px;
	width: 100%;
}

.span12 .hero-desc {
	background-color: #353334;
	height: 150px;
	width: 100%;
	margin-right: auto;
	margin-left: auto;
}

.span12 .hero-desc p {
	color: #f7f7f7;
	text-align: center;
	font-size: 1.7em;
	margin-top: 50px;
}

.span12 .hero h1 {
	text-align: center;
	font-size: 2.5em;
	font-weight: 700;
	color: #f7f7f7;
	padding-top: 50px;
	letter-spacing: 1px;
}

.span12 .hero h2 {
	text-align: center;
	font-size: 1.5em;
	font-weight: 400;
	color: #f7f7f7;
	letter-spacing: 1px;
}

#buttons {
	width: 100%;
	text-align: center;
	position: relative;
	display: block;
	margin-left: auto;
	margin-right: auto;
	margin-top: 20px;
}

#buttons ul {
	margin:0;
    padding:0;
    display:inline-block;
    list-style: none;   /*Set display to inline-block to the ul*/
}

#buttons ul li {
	float: left;
    margin-right: 1.3em; /*this is the usual*/
    padding: 0;
}

.hero-buttons a{
	color: #fefefe;
	text-decoration: none;
	text-align: center;
	display: inline-block;
	float: left;
	margin-left: 5px;
	margin-right: 5px;
	padding: 10px 15px 10px 15px;
	margin: 0 0 0 0;
	background-color: #16A085;
	border-radius: 5px;
	    -webkit-transition:background-color 0.1s ease-in-out;  
}

.hero-buttons a:hover {
	background-color: #128670;
}

#sublime {
	background-color: #2980b9;
		-webkit-transition:background-color 0.1s ease-in-out;  
}

#sublime a:hover {
	background-color: #000000;
	padding-right: 10px;
}

.feature-buttons a{
	color: #fefefe;
	text-decoration: none;
	text-align: center;
	display: inline-block;
	float: left;
	margin-left: 5px;
	margin-right: 5px;
	padding: 10px 15px 10px 15px;
	margin: 0 0 0 0;
	background-color: #16A085;
	border-radius: 5px;
	    -webkit-transition:background-color 0.1s ease-in-out;  
}

.feature-buttons a:hover {
	background-color: #128670;
}

a {
	color: #1abc9c;
}

.box {
	width: 100%;
	height:300px;
}

img {
	max-width: 90%;
	margin-right: auto;
	margin-left: auto;
	display: block;
	height: auto;
	margin-top: 30px;
	border-width: 1px;
	border-style: solid;
	border-color: #000000;
}

.title {
	padding-top: 35px;
	font-size: 1.9em;
	font-weight: 100;
	font-family: "proxima-nova",sans-serif;
}

.bold {
	font-weight: bold;
}

#files {
	list-style-type: square;
}

#feature-list {
	font-family: "proxima-nova",sans-serif;
	text-align: center;
	font-size: 1.5em;
	font-weight: 800;
	color: #070707;
	text-transform: uppercase;
	padding-top: 20px;
}

p .feature-list {
	font-family: "proxima-nova",sans-serif;
	color: #ff00ff;
}

footer {
  margin: 0 0 0 0;
  padding: 0 0 0 0;
  position: relative;
  height: 130px;
  background-color: #353334;
}

span.amp {
  font-family: Baskerville, Palatino, "Book Antiqua", serif;
  font-style: italic;
}

#octocat {
	border-width: 0px;
}

#devices {
	background-image: url('../img/devices.png');
	background-repeat: no-repeat;
	margin-right: auto;
	margin-left: auto;
	width: 960px;
	height: 249px;
	margin-top: 20px;
}

#device-icons {
	color: #f7f7f7;
	font-size: 10em;
	text-align: center;
	margin-top: 100px;
}

@media screen and (max-width: 768px){
	#devices {
		background-size: 70%;
		text-align: center;
	}
}

@media screen and (max-width: 480px){
	#devices {
		background-size: 40%;
		text-align: center;
	}
}

